# pywinmm

./: MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
pywinmm/: __init__.py  pywinmm.py
