[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywinmm"
version = "0.1"
authors = [
  { name="Nacer Baaziz", email="nacerbaaziz@ng-space.com" },
]
keywords = ['windows media', 'play wav', 'play mp3', 'python audio', 'play audio files', 'record audio files', 'pymedia', 'winmm.dll', 'pywinmm']
description = "a python library that works with win multy media dll"
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.4"
classifiers = [
    'Development Status :: 5 - Production/Stable', 
    'Intended Audience :: Developers',      
    'Topic :: Software Development :: Build Tools', 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", 
    "Operating System :: Microsoft :: Windows", 
]

[project.urls]
"Homepage" = "https://github.com/baaziznasser/pywinmm"
"Bug Tracker" = "https://github.com/baaziznasser/pywinmm/issues"