[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywinmm"
version = "0.2"
authors = [
  { name="Nacer Baaziz", email="nacerbaaziz@ng-space.com" },
]
keywords = ['pywinmm', 'windows multy media', 'winmm.dll', 'pyaudio', 'mp3']
description = "a python library that works with win multy media dll"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    'Development Status :: 5 - Production/Stable', 
    'Intended Audience :: Developers',      
    'Topic :: Software Development :: Build Tools', 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", 
    "Operating System :: Microsoft :: Windows", 
]

[project.urls]
"Homepage" = "https://github.com/baaziznasser/pywinmm"
"Bug Tracker" = "https://github.com/baaziznasser/pywinmm/issues"